--- a/css/styles.css
+++ b/css/styles.css
@@ -9,16 +9,22 @@ body {
 	background-color: #fffcf8;
 }
 
+h9 { 
+	color: white;
+}
+
+
 /* Changing the background colour for the header */
 
 header {
+	font-family: Raleway, sans-serif;
 	background-color: #000060;
 }
 
 /* Changing the background color for the navigation bar */
 
 .navbar {
-	background-color: #fff0e0;
+	background-color: #75A3BF;
 }
 
 /* Effect on social media buttons */
