--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
 
-h1 {font-family: "rubik", sans-serif; font-size: 30px}
+h1 {font-family: "ivyora-display", sans-serif; font-size: 100px}
 h2 {font-family: "rubik", sans-serif; font-size: 50px}
 h3 {font-family: "rubik", sans-serif; font-size: 200px; }
 p{font-family: "Noto sans KR", sans-serif; font-size:20px}
