--- a/css/styles.css
+++ b/css/styles.css
@@ -280,7 +280,7 @@ header video {
   left: 50%;
   min-width: 100%;
   min-height: 100%;
-  width: auto;
+  width: 750;
   height: auto;
   z-index: 0;
   -ms-transform: translateX(-50%) translateY(-50%);
