--- a/css/styles.css
+++ b/css/styles.css
@@ -242,7 +242,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 h1 {font-family: 'DM Serif Display', serif; font-size: 100px;font-weight: 700}
 h2 {font-family: "rubik", sans-serif; font-size: 50px}
-h3 {font-family: "rubik", sans-serif; font-size: 200px; }
+h3 {font-family: "rubik", sans-serif; font-size: 30px; }
 span {font-family: 'DM Serif Display', serif; font-size: 20px;font-weight: 700}
 p{font-family: "Noto sans KR", sans-serif; font-size:20px}
 .bluefellow {color:#75A3BF}
@@ -394,11 +394,7 @@ div.background {
 .placeholder {
     font-size: 14px;
     font-weight: 600;
-=======
-.overlay {
-    position:absolute;
-    top:0;
-    left:0;
-    z-index:1;
->>>>>>> Stashed changes
+}
+.carousel{
+  interval: 2000
 }
