final before deadline

--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,7 @@ h2 {font-family: "rubik", sans-serif; font-size: 50px}
 h3 {font-family: "rubik", sans-serif; font-size: 30px; }
 span {font-family: 'DM Serif Display', serif; font-size: 20px;font-weight: 700}
 p{font-family: "Noto sans KR", sans-serif; font-size:20px}
+li{font-family: "Noto sans KR", sans-serif; font-size:20px}
 .bluefellow {color:#75A3BF}
 .beigefellow {color:#D9B88F}
 .backblue {background-color:#75A3BF; color:#FFFFFF;}
