--- a/css/styles.css
+++ b/css/styles.css
@@ -403,3 +403,23 @@ div.background {
 .round {
   border-radius: 10%;
 }
+
+.headervideo {
+      position: relative;
+      height: 300px;
+    }
+
+.videovideo {
+      position: absolute;
+      top: 0;
+      left: 100;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+P.blocktext {
+    margin-left: auto;
+    margin-right: auto;
+    width: 30em;
+	text-align: justify;
