--- a/css/styles.css
+++ b/css/styles.css
@@ -422,4 +422,15 @@ P.blocktext {
     margin-left: auto;
     margin-right: auto;
     width: 50em;
-	text-align: justify;
+	text-align: justify;}
+P.blocktextsmall {
+    margin-left: auto;
+    margin-right: auto;
+    width: 30em;
+	text-align: justify;}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
